# league-manager

./: .codecov.yml  .coveragerc  .env.demo  .env_template  .gitignore  AGENTS.md  CLAUDE.md  DEMO.md  Dockerfile  Dockerfile.nginx  FEATURE_COMPLETION_SUMMARY.md  GEMINI.md  Procfile  README.md  capture_screenshot.sh  demo_database.json  deploy.sh  docker-compose.demo.yml  docker-compose.yaml  e2e_test_game_results.py  entrypoint.sh  junit.xml  manage.py  mcp.toml  nginx.conf  package-lock.json  pyproject.toml  pytest.ini  renovate.json  requirements.txt  reset_database.py  reset_database.sh  setup.cfg  test_requirements.txt  test_settings.py
.circleci/: config.yaml  config.yml
.claude/agents/: architecture-designer.md  cleanup-coordinator.md  documentation-specialist.md  git-coordinator.md  implementation-engineer.md  qa-engineer.md  requirements-analyst.md
.github/: dependabot.yml
.github/.gemini/: settings.json
.github/workflows/: ci.yaml  ci.yml  ci_branch.yaml  ci_pr.yaml  deploy.yaml  eslint.yaml  part_build_test.yaml  part_check_migrations.yaml  part_docker_build.yaml  part_docker_push.yaml  part_docker_push_artifact.yaml  part_docker_push_staging.yaml  part_docker_test.yaml  part_node_build.yaml  part_node_test.yaml  part_node_test_matrix.yaml  part_run_migrations.yaml  part_test_compose_network.yaml
.run/: pytest in leaguesphere.run.xml
Teammanager/: apps.py  models.py  settings.py  urls.py
accesscontrol/: admin.py  apps.py  forms.py  menu.py  models.py  urls.py  views.py
accesscontrol/migrations/: 0001_initial.py  0002_officialsassignment.py  0003_delete_officialsassignment.py  0004_association.py  0005_leagueassociationassignment.py  0006_alter_leagueadminassignment_league_and_more.py
accesscontrol/templates/: association_admin.html  league_admin.html  team_admin.html
accounts/: README.md  api.py  serializers.py  urls.py
conductor/: README.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
container/: README.md  app.Dockerfile  deploy.sh  entrypoint.demo.sh  entrypoint.sh  healthcheck.demo.sh  healthcheck.sh  nginx-default.conf  nginx.Dockerfile  nginx.conf  nginx.demo.conf  nginx.staging.conf  spinup_test_db.sh  start_dev_server.sh  test_db_dump.sql  test_user.sql
coverage-reports/: README.md
dashboard/: README.md
deployed/: .env.staging  README.md  docker-compose.demo.yaml  docker-compose.demo.yml  docker-compose.staging.yaml  docker-compose.staging.yml  docker-compose.yaml  healthcheck.sh  ls.env.staging.template  nginx-default.conf  test-compose-network.sh
deployed/mysql-init/: 01-create-staging-db.sh  01-create-staging-db.sql
doc/: Database.puml
docs/: README.md  demo-info.md
docs/arch/: 0001-migrate-to-uv-package-manager.md  0024-status-field-divergence-analysis.md  2026-03-13-beh-001-005-fixes-design.md  architecture-overview.md  dual-progression-logic.md
docs/features/: 2026-03-11-pr944-code-review.md
docs/guides/: coding-standards.md  contributor-guide.md  demo-deployment.md  infrastructure-policy.md  setup-guide.md
docs/plans/: 2026-03-19-template-management-design.md  2026-03-19-template-management-tasks.md  2026-04-16-league-team-selection-design.md  2026-04-16-league-team-selection.md
docs/reports/: deployment-summary.md
docs/testing/: chrome-mcp-test-scenario.md  gameresults-test-scenario.md
fe_template/: .eslintrc.json  README.md  apps.py  package-lock.json  package.json  urls.py  views.py  webpack.config.js
fe_template/src/: store.js
feature-dev/: 0025_extract-designer-data-model.md  5er DFFL Generische Spielpläne.ods  Leaguesphere - generische Spielpläne.ods  gameday_designer.md
feature-dev/gameday_designer/: dedicated-placement-stages.md  requirements-flowchart-v2.md  requirements.md  test-scenarios.md
feature-dev/layered-manager/: ADMIN_BUG_FIX.md  ADMIN_FIX_COMPLETE.md  SESSION_SUMMARY.md  TESTING_SUMMARY.md  TEST_PLAN.md
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
gameday_designer/: EDGE_SYNC_FIX.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  PHASE_0_COMPLETION.md  PHASE_1_COMPLETION.md  PHASE_4_COMPLETION.md  README.md  __init__.py  admin.py  app_urls.py  apps.py  eslint.config.mjs  feedback.md  index.html  menu.py  models.py  package-lock.json  package.json  permissions.py  serializers.py  tsconfig.json  tsconfig.node.json  urls.py  views.py  vite.config.mts  vitest.config.mts
gameday_designer/migrations/: 0001_initial.py  0002_templateslot_stage_type.py  0003_scheduletemplate_sharing.py  (+2 more)
gamedays/: DB-Queries.md  README.md  admin.py  apps.py  constants.py  forms.py  menu.py  models.py  urls.py  views.py
gamedays/api/: urls.py  (+5 more)
league_manager/: README.md  __init__.py  admin.py  apps.py  asgi.py  base_menu.py  constants.py  context_processors.py  models.py  settings.py  signals.py  sitemaps.py  urls.py  views.py  wsgi.py
league_table/: README.md  admin.py  apps.py  constants.py  forms.py  menu.py  models.py  urls.py  views.py
liveticker/: .babelrc  .eslintrc.json  README.md  apps.py  constants.py  eslint.config.mjs  index.html  jest.config.js  package-lock.json  package.json  urls.py  views.py  vite.config.mjs  vitest.config.mjs  webpack.config.js
locust_testing/: README.md  locustfile.py
officials/: README.md  admin.py  apps.py  forms.py  menu.py  models.py  serializers.py  urls.py  views.py
passcheck/: README.md  admin.py  apps.py  eslint.config.mjs  exclude-files.txt  forms.py  index.html  jest.config.js  junit.xml  menu.py  models.py  package-lock.json  package.json  tsconfig.json  urls.py  views.py  vite.config.mts  vitest.config.mts  webpack.config.js
scorecard/: .eslintrc.json  README.md  apps.py  eslint.config.mjs  index.html  jest.config.js  junit.xml  package-lock.json  package.json  tests.py  urls.py  views.py  vite.config.mjs  vitest.config.mjs  webpack.config.js
scorecard2/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
scripts/: populate_manager_test_data.py
teammanager/: DB-Queries.md  README.md  admin.py  apps.py  models.py  urls.py  views.py
(+1240 files in other folders)
